--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,24 +1,40 @@
+upstream node_upstream {
+    server node:5173;
+}
+
 server {
     listen 80;
     server_name localhost;
 
-    location / {
-        proxy_pass http://node:5173;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    root /var/www/html/backend/public;
+    index index.php;
+
+    location ^~ /sanctum {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location /api {
-        alias /var/www/html/backend/public;
-        try_files $uri /index.php?$query_string;
+    location ^~ /api/ {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ~ ^/api/.*\.php$ {
+    location ~ \.php$ {
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $request_filename;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO       $fastcgi_path_info;
+    }
+
+    location / {
+        proxy_pass http://node_upstream;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location ~ /\.php {
+        return 404;
     }
 }
