--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "axios": "^1.5.0",
-    "bootstrap": "^5.3.2"
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
   },
   "browserslist": [
     "defaults"
